# api/src/app/models/Room/LivingRoom.ts
@@ -1,16 +1,15 @@
-import { Decorators, STI } from '@rvoh/dream'
-import { DreamColumn, DreamSerializers } from '@rvoh/dream/types'
 import Room from '@models/Room.js'
+import { STI } from '@rvoh/dream'
+import { DreamSerializers } from '@rvoh/dream/types'
 
-const deco = new Decorators<typeof LivingRoom>()
+// const deco = new Decorators<typeof LivingRoom>()
 
 @STI(Room)
 export default class LivingRoom extends Room {
-  public override get serializers(): DreamSerializers<LivingRoom> {
+  public get serializers(): DreamSerializers<LivingRoom> {
     return {
       default: 'Room/LivingRoomSerializer',
       summary: 'Room/LivingRoomSummarySerializer',
     }
   }
-
 }
